// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Subscription renders broadcasting subscription 1`] = `
<MenuItem>
  <div
    className="subscription"
  >
    <div>
      <Image
        as="img"
        avatar={true}
        src="http://via.placeholder.com/28x28"
        ui={true}
      />
      <span>
        Productioncoder
      </span>
    </div>
    <Icon
      as="i"
      name="signal"
    />
  </div>
</MenuItem>
`;

exports[`Subscription renders empty subscription 1`] = `
<MenuItem>
  <div
    className="subscription"
  >
    <div>
      <Image
        as="img"
        avatar={true}
        src="http://via.placeholder.com/28x28"
        ui={true}
      />
      <span />
    </div>
  </div>
</MenuItem>
`;

exports[`Subscription renders non-broadcasting subscription with new videos 1`] = `
<MenuItem>
  <div
    className="subscription"
  >
    <div>
      <Image
        as="img"
        avatar={true}
        src="http://via.placeholder.com/28x28"
        ui={true}
      />
      <span>
        Productioncoder
      </span>
    </div>
    <span
      className="new-videos-count"
    >
      4
    </span>
  </div>
</MenuItem>
`;

exports[`Subscriptions renders 1`] = `
<Fragment>
  <SideBarHeader
    title="Subscriptions"
  />
  <Subscription
    broadcasting={true}
    label="MusicChannel"
  />
  <Subscription
    amountNewVideos={10}
    label="Coursea"
  />
  <Subscription
    amountNewVideos={23}
    label="TEDx Talks"
  />
  <Subscription
    amountNewVideos={4}
    label="Stanford iOS"
  />
  <Subscription
    amountNewVideos={114}
    label="Udacity"
  />
  <Divider />
</Fragment>
`;

exports[`renders 1`] = `
<Fragment>
  <Component
    title="Subscriptions"
  />
  <Subscription
    broadcasting={true}
    label="MusicChannel"
  />
  <Subscription
    amountNewVideos={10}
    label="Coursea"
  />
  <Subscription
    amountNewVideos={23}
    label="TEDx Talks"
  />
  <Subscription
    amountNewVideos={4}
    label="Stanford iOS"
  />
  <Subscription
    amountNewVideos={114}
    label="Udacity"
  />
  <Divider />
</Fragment>
`;

exports[`renders Subscriptions 1`] = `
<Fragment>
  <Component
    title="Subscriptions"
  />
  <Subscription
    broadcasting={true}
    label="MusicChannel"
  />
  <Subscription
    amountNewVideos={10}
    label="Coursea"
  />
  <Subscription
    amountNewVideos={23}
    label="TEDx Talks"
  />
  <Subscription
    amountNewVideos={4}
    label="Stanford iOS"
  />
  <Subscription
    amountNewVideos={114}
    label="Udacity"
  />
  <Divider />
</Fragment>
`;
